--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
     "mac": "mongod --dbpath=/Users/joliverestampador/mongodb-data/",
-    "test": "jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +30,7 @@
   "devDependencies": {
     "env-cmd": "^8.0.2",
     "jest": "^26.2.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
