--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
     "mac": "mongod --dbpath=/Users/joliverestampador/mongodb-data/",
-    "test": "env-cmd ./config/test.env jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
